# shr-e-gadgets

./: .gitignore  AUTHORS  Makefile.am  README  TODO  autogen.sh  configure.ac
src/: Makefile.am  e_mod_gad_gsm.c  e_mod_main.c
src/battery-fso/: Makefile.am  e_mod_fso.c  e_mod_main.c  e_mod_main.h  module.desktop.in
src/illume-rightclick-toggle/: Makefile.am  e-module-illume-rightclick-toggle.edj  e_mod_main.c  module.desktop.in
src/shelf-gadgets/: Makefile.am  e-module-shr-e-gadgets.edj  e_mod_gad_gsm.c  e_mod_gad_gsm.h  e_mod_gad_wifi.c  module.desktop.in
src/softkey_quickpanel/: Makefile.am  elm_softkey.h  main.c
src/softkey_quickpanel/data/: 89shr_elm_softkey  90shr_elm_softkey  Makefile.am  shr_elm_softkey.desktop
src/softkey_quickpanel/data/themes/: Makefile.am  default.edc
